--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "chart.js": "^2.9.3",
+    "chartjs-plugin-crosshair": "^1.1.6",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
