--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-crosshair": "^1.1.6",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
