--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.9.3",
     "chart.js": "^2.9.3",
     "chartjs-plugin-crosshair": "^1.1.6",
     "core-js": "^3.6.5",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.3",
     "vue": "^2.6.11"
   },
   "devDependencies": {
