--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "buefy": "^0.9.3",
+    "bulma": "^0.9.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-crosshair": "^1.1.6",
     "core-js": "^3.6.5",
